2003-05-02  Ross Burton  <ross@burtonini.com>

	* xrdb/Makefile.am (xrdbdir):
	$(datadir) is lowercase not uppercase! :(

2003-05-01  Ross Burton  <ross@burtonini.com>

	* gnome-settings-xrdb.[ch]:
	Using the current GTK+ theme as a base for colours, set a bunch of
	properties in the X resource database. And as if by magic, legacy
	apps (Xaw, Tk, Motif) match GNOME!

	* xrdb/*.ad:
	Data files for above.

Thu Feb  6 16:43:33 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-font.c (load_xcursor_theme): handle xcursor so
	that we support Xcursor files.

	* gnome-settings-daemon.c: move
	gnome_settings_daemon_spawn_with_input here so multiple modules
	can use it.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

2003-01-19  Alex Duggan  <aldug@astrolinux.com>

	* gnome-settings-mouse.c (filter), (set_locate_pointer):
	make the right control key also locate the mouse pointer.
	Fixes #87426

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-08  Mark McLoughlin  <mark@skynet.ie>

	Create a XSettingsManager for every available
	screen and apply settings changes to each.

	* gnome-settings-daemon.c:
	(manager_event_filter): make this a per-window filter
	and ask the appropriate xsettings manager to filter
	the event.
	(finalize): dispose of every manager.
	(gnome_settings_daemon_new): create a settings manager
	for each screen.

	* gnome-settings-xsettings.c:
	(translate_bool_int), (translate_int_int),
	(translate_string_string), (process_value),
	(xsettings_callback), (xft_callback),
	(gnome_xft_settings_set_xsettings),
	(gnome_settings_xsettings_load): apply settings to
	every available settings manager.
