@@ -1,5 +1,13 @@
 2003-05-02  Ross Burton  <ross@burtonini.com>
 
+	* gnome-settings-xrdb.c (scan_for_files): 
+	If ~/.gnome2/xrdb doesn't exist, don't stop.
+
+	* xrdb/.cvsignore:
+	Added.
+
+2003-05-02  Ross Burton  <ross@burtonini.com>
+
 	* xrdb/Makefile.am (xrdbdir):
 	$(datadir) is lowercase not uppercase! :(
 
